--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "1-intro.js",
   "dependencies": {
-    "bootstrap": "^5.2.1",
     "lodash": "^4.17.21"
   },
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
